src/objects/OnlineApplicationOffer__c.object
<CustomObject>
    <fields>
        <fullName>Mailed_Check_Fee_Disclosure__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Displayed to user when they select Check as a Payment Method.</inlineHelpText>
        <label>Mailed Check Fee Disclosure</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mailed_Statement_Disclosure__c</fullName>
        <defaultValue>&quot;$3.00 fee per paper statement.  Mailed statements are not available with weekly and bi-weekly billing cycle.&quot;</defaultValue>
        <encryptionScheme>None</encryptionScheme>
        <label>Mailed Statement Disclosure</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notice_Delivery__c</fullName>
        <description>Sent to App Manager as NoticeDelivery</description>
        <label>Notice Delivery</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Email</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Offer_Contact_Name__c</fullName>
        <description>This name will show on the welcome letter and cards shipped emails in the signature block. If it is blank, we will use the App Owner.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>This name will show on the welcome letter and cards shipped emails in the signature block. If it is blank, we will use the App Owner.</inlineHelpText>
        <label>Offer Contact Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Offer_Email__c</fullName>
        <description>Use this on email communications if there isn&apos;t a salesperson</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Use this on email communications if there isn&apos;t a salesperson</inlineHelpText>
        <label>Offer Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Offer_Logo__c</fullName>
        <formula>IMAGE(&apos;https://&apos; &amp; $Label.External_Instance_URL &amp; &apos;/creditapplication/servlet/servlet.FileDownload?file=&apos; &amp; Email_Template_Logo__c, &apos;Logo&apos;, 100, 200)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Offer Logo</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Offer_Phone_Number__c</fullName>
        <description>Use this on email communications if there isn&apos;t a salesperson</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Use this on email communications if there isn&apos;t a salesperson</inlineHelpText>
        <label>Offer Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Offer_Website__c</fullName>
        <description>Use this on email communications if there isn&apos;t a salesperson</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Use this on email communications if there isn&apos;t a salesperson</inlineHelpText>
        <label>Offer Website</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Online_Pay__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Online Pay</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Other_Services__c</fullName>
        <label>Other Services (OTR Only)</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <controllingField>Product_Type__c</controllingField>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>ATM</fullName>
                </value>
                <value>
                    <fullName>ATM/Debit Only</fullName>
                </value>
                <value>
                    <fullName>ATM &amp; PlusCheks</fullName>
                </value>
                <value>
                    <fullName>Bridgestone Tire Program</fullName>
                </value>
                <value>
                    <fullName>Bulk Fuel Management</fullName>
                </value>
                <value>
                    <fullName>Cellular Wireless Discounts</fullName>
                </value>
                <value>
                    <fullName>Compliance Services</fullName>
                </value>
                <value>
                    <fullName>Corporate Payment / T&amp;E Solutions</fullName>
                </value>
                <value>
                    <fullName>Electronic Logging Devices</fullName>
                </value>
                <value>
                    <fullName>Emergency Roadside Assistance</fullName>
                </value>
                <value>
                    <fullName>Factoring</fullName>
                </value>
                <value>
                    <fullName>Fleet MasterCard</fullName>
                </value>
                <value>
                    <fullName>Fuel Management Services</fullName>
                </value>
                <value>
                    <fullName>Fuel Tax</fullName>
                </value>
                <value>
                    <fullName>GPS/Telematics</fullName>
                </value>
                <value>
                    <fullName>GPS Services</fullName>
                </value>
                <value>
                    <fullName>MasterCard SmartFunds Non-Payroll</fullName>
                </value>
                <value>
                    <fullName>MasterCard SmartFunds Payroll</fullName>
                </value>
                <value>
                    <fullName>MoneyCodes</fullName>
                </value>
                <value>
                    <fullName>Money Codes and ATM</fullName>
                </value>
                <value>
                    <fullName>On-Site Fueling</fullName>
                </value>
                <value>
                    <fullName>Payroll Cards</fullName>
                </value>
                <value>
                    <fullName>Permits</fullName>
                </value>
                <value>
                    <fullName>PlusChek Only</fullName>
                </value>
                <value>
                    <fullName>Retail Fuel Management</fullName>
                </value>
                <value>
                    <fullName>Scales</fullName>
                </value>
                <value>
                    <fullName>SecureFuel</fullName>
                </value>
                <value>
                    <fullName>Smartfunds Non-Payroll</fullName>
                </value>
                <value>
                    <fullName>SmartFunds Payroll</fullName>
                </value>
                <value>
                    <fullName>Tire Discounts</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PG_Disclosure__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>PG Disclosure</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PSR_ATM_Limit__c</fullName>
        <label>ATM Limit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PSR_Card_Fee__c</fullName>
        <label>Card Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PSR_Fuel_Cash__c</fullName>
        <label>Fuel &amp; Cash</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PSR_Marketing_Fee__c</fullName>
        <label>Marketing Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PSR_Money_Code__c</fullName>
        <label>Money Code</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PSR_Scales__c</fullName>
        <label>Scales</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Parent_Carrier_ID__c</fullName>
        <description>Sent to EFS App Manager as</description>
        <label>Parent Carrier ID</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>122465</fullName>
                </value>
                <value>
                    <fullName>143543</fullName>
                </value>
                <value>
                    <fullName>144360</fullName>
                </value>
                <value>
                    <fullName>145050</fullName>
                </value>
                <value>
                    <fullName>147997</fullName>
                </value>
                <value>
                    <fullName>150581</fullName>
                </value>
                <value>
                    <fullName>150732</fullName>
                </value>
                <value>
                    <fullName>151755</fullName>
                </value>
                <value>
                    <fullName>157330</fullName>
                </value>
                <value>
                    <fullName>158985</fullName>
                </value>
                <value>
                    <fullName>159885</fullName>
                </value>
                <value>
                    <fullName>160109</fullName>
                </value>
                <value>
                    <fullName>162181</fullName>
                </value>
                <value>
                    <fullName>162383</fullName>
                </value>
                <value>
                    <fullName>162800</fullName>
                </value>
                <value>
                    <fullName>169608</fullName>
                </value>
                <value>
                    <fullName>170602</fullName>
                </value>
                <value>
                    <fullName>170960</fullName>
                </value>
                <value>
                    <fullName>172348</fullName>
                </value>
                <value>
                    <fullName>175433</fullName>
                </value>
                <value>
                    <fullName>175545</fullName>
                </value>
                <value>
                    <fullName>178682</fullName>
                </value>
                <value>
                    <fullName>179102</fullName>
                </value>
                <value>
                    <fullName>180956</fullName>
                </value>
                <value>
                    <fullName>182851</fullName>
                </value>
                <value>
                    <fullName>183703</fullName>
                </value>
                <value>
                    <fullName>184835</fullName>
                </value>
                <value>
                    <fullName>189227</fullName>
                </value>
                <value>
                    <fullName>192449</fullName>
                </value>
                <value>
                    <fullName>301119</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Parent_Funded_Issuer_ID__c</fullName>
        <description>Sent to EFS App Manager as</description>
        <label>Parent Funded Issuer ID</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>100000</fullName>
                </value>
                <value>
                    <fullName>105757</fullName>
                </value>
                <value>
                    <fullName>113301</fullName>
                </value>
                <value>
                    <fullName>118897</fullName>
                </value>
                <value>
                    <fullName>140187</fullName>
                </value>
                <value>
                    <fullName>141905</fullName>
                </value>
                <value>
                    <fullName>143039</fullName>
                </value>
                <value>
                    <fullName>144496</fullName>
                </value>
                <value>
                    <fullName>151674</fullName>
                </value>
                <value>
                    <fullName>155189</fullName>
                </value>
                <value>
                    <fullName>189984</fullName>
                </value>
                <value>
                    <fullName>194133</fullName>
                </value>
                <value>
                    <fullName>194134</fullName>
                </value>
                <value>
                    <fullName>194135</fullName>
                </value>
                <value>
                    <fullName>194136</fullName>
                </value>
                <value>
                    <fullName>194143</fullName>
                </value>
                <value>
                    <fullName>194147</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Partner_Email_List__c</fullName>
        <description>A list of partners who would will receive the email communication related for this offer. (Separate by commas.)</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>A list of partners who would will receive the email communication related for this offer. (Separate by commas.)</inlineHelpText>
        <label>Partner Email List</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_Group_Email_Address__c</fullName>
        <description>one address that will receive the email communications</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>one address that will receive the email communications</inlineHelpText>
        <label>Partner Group Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Payment_Method__c</fullName>
        <inlineHelpText>How would you like to pay your invoice?</inlineHelpText>
        <label>Payment Method</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Billing_Cycle__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Auto Pay (ACH)</fullName>
                </value>
                <value>
                    <fullName>Internet Pay</fullName>
                </value>
                <value>
                    <fullName>Faxed ElectroniChek</fullName>
                </value>
                <value>
                    <fullName>Mailed Check</fullName>
                </value>
                <value>
                    <fullName>Wire</fullName>
                </value>
                <value>
                    <fullName>Customer Initiated ACH</fullName>
                </value>
                <value>
                    <fullName>Auto Pay Only</fullName>
                </value>
                <value>
                    <fullName>Auto Draft</fullName>
                </value>
                <value>
                    <fullName>Online Payment</fullName>
                </value>
                <value>
                    <fullName>Western Union</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Price_Book__c</fullName>
        <label>Price Book</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>F1 &amp; EFS Partners</fullName>
                </value>
                <value>
                    <fullName>EFS Products</fullName>
                </value>
                <value>
                    <fullName>Fleet Price Book</fullName>
                </value>
                <value>
                    <fullName>F1 OTR Pricebook</fullName>
                </value>
                <value>
                    <fullName>Truckers Products</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Primary_Contact_Email_Address__c</fullName>
        <description>Sent to App Manager as EmailAddress</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Primary Contact Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Product_Type__c</fullName>
        <label>Product Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>OTR - LLC</fullName>
                </value>
                <value>
                    <fullName>OTR</fullName>
                </value>
                <value>
                    <fullName>TradeCredit</fullName>
                </value>
                <value>
                    <fullName>MasterCard</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Program__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Program</label>
        <referenceTo>Program__c</referenceTo>
        <relationshipLabel>Online Application Offers</relationshipLabel>
        <relationshipName>Online_Application_Offers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Promotional_Code__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Promotional Code</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prompt_Type__c</fullName>
        <description>for use in EFS integration</description>
        <label>Prompt Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                    <label>ID/Odometer</label>
                </value>
                <value>
                    <fullName>2</fullName>
                    <label>Unit/Odometer</label>
                </value>
                <value>
                    <fullName>3</fullName>
                    <label>Odometer Only</label>
                </value>
                <value>
                    <fullName>4</fullName>
                    <label>No prompts</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Send_to_App_Manager__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked, once an application is adjudicated, send to App Manager.</description>
        <label>Send to App Manager</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Setup_Fee__c</fullName>
        <label>Setup Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Small_Fleet_Completion_Message__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Small Fleet Completion Message</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Statement_Type__c</fullName>
        <description>Sent to EFS App Manager as</description>
        <label>Statement Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>02</fullName>
                </value>
                <value>
                    <fullName>44</fullName>
                </value>
                <value>
                    <fullName>46</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Terms_and_Conditions_Version__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>This must match the attached file name EXACTLY.  The attached file must be a valid HTML file with a file extension of &apos;html&apos;.</inlineHelpText>
        <label>Terms and Conditions Version</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tier_ID__c</fullName>
        <label>Tier ID</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>74</fullName>
                </value>
                <value>
                    <fullName>75</fullName>
                </value>
                <value>
                    <fullName>82</fullName>
                </value>
                <value>
                    <fullName>78</fullName>
                </value>
                <value>
                    <fullName>77</fullName>
                </value>
                <value>
                    <fullName>90</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Trans_Limit__c</fullName>
        <description>Sent to EFS App Manager</description>
        <label>Trans Limit</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Use_Offer_Contact_Details_not_Owner__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If this is checked, the welcome email and cards shipped email will use the details here for the signature block, if not checked it will use the owners.</description>
        <inlineHelpText>If this is checked, the welcome email and cards shipped email will use the details here for the signature block, if not checked it will use the owners.</inlineHelpText>
        <label>Use Offer Contact Details not Owner</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Western_Union_Fee_Disclosure__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Western Union Fee Disclosure</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Wire_Fee_Disclosure__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Displayed to user when they select Wire as a Payment Method.</inlineHelpText>
        <label>Wire Fee Disclosure</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Online Application Offer</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Credit_Review_Path__c</columns>
        <columns>Promotional_Code__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>NAME</columns>
        <columns>Application_Title__c</columns>
        <columns>Product_Type__c</columns>
        <columns>Card_Program__c</columns>
        <columns>Terms_and_Conditions_Version__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Offer Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Online Application Offers</pluralLabel>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>BOCDD_for_Parent_Funding</fullName>
        <active>true</active>
        <description>https://jira.devtools.wexinc.com/browse/PSOBACKLOG-249

If BOCDD is checked, Funding must be Parent Funding</description>
        <errorConditionFormula>AND(Enable_BOCDD_for_Parent_funded__c, NOT(ISPICKVAL(Funding__c, &apos;Parent Funded&apos;)))</errorConditionFormula>
        <errorDisplayField>Funding__c</errorDisplayField>
        <errorMessage>Enable BOCDD for Parent Funded must be left unchecked when funding is not set to Parent Funded</errorMessage>
    </validationRules>
</CustomObject>